--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <html>
 <head>
   <script src="./bundle.js" ></script>
-  <link rel="stylesheet" type="text/css" href="./index.css"  />
+  <link rel="stylesheet" type="text/css" href="index.css"/>
 </head>
 <body>
   <div id="app"></div>
-<script type="text/javascript" src="index.js"></script><script type="text/javascript" src="index.js"></script></body>
+</body>
 </html>
