--- a/index.html
+++ b/index.html
@@ -1,8 +1,13 @@
 <html>
 <head>
-  <link rel="stylesheet" type="text/css" href="index.css"/>
+  <link rel='stylesheet' type='text/css' href='index.css'/>
+  <link rel='shortcut icon' type='image/x-icon' href='https://s3-us-west-1.amazonaws.com/lrg.life/images/favicon.ico'/>
+  <title>Lucas Gregory - Web Developer</title>
+  <meta name="description" content="Lucas Gregory's Portfolio, Experience, and Skills">
+  <meta name="keywords" content="HTML,CSS,JavaScript,Java,React,Python,C">
+  <meta name="author" content="Lucas Gregory">
 </head>
 <body>
-  <div id="app"></div>
+  <div id='app'></div>
 </body>
 </html>
